--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "chart.js": "^4.4.2",
     "formik": "^2.4.5",
+    "gsap": "^3.12.5",
     "next": "14.0.4",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
