--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
+    "sharp": "^0.33.3",
     "yup": "^1.3.3"
   },
   "devDependencies": {
